# alert_price

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alert_price/api/: app.py  depends.py  routers.py  schemas.py
alert_price/services/: database_gateway.py  event_loop_handler.py  price_cache.py  prices_request.py  redis_client.py
alert_price/templates/: index.html
alert_price/utils/: logger.py
static/: scripts.js  styles.css
templates/: index.html
tests/: conftest.py  test_price_request.py
