[tool.poetry]
name = "alert-price"
version = "0.1.0"
description = ""
authors = ["aleks <newacb1979@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.18"
pytest = "^8.3.5"
aioresponses = "^0.7.8"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
redis = "^6.0.0"

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = ["ignore::pytest.PytestConfigWarning"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
